fix slider content alignment

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -82,6 +82,7 @@ h1, h2, h3, h4, h5, h6 {
     column-gap: 19px;
   }
 
+  &__image { height: 815px; }
   &__header {
     font-size: 110px;
     line-height: 134px;
